Fixing links to lesson reference pages.
Closes #489.

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -49,7 +49,7 @@ redirect_from:
     <td id="shell">The Unix Shell</td>
     <td><a href="{{site.github_io_url}}/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell"></a></td>
     <td><a href="{{site.github_url}}/shell-novice" target="_blank" class="icon-github" title="The Unix Shell"></a></td>
-    <td><a href="{{site.github_io_url}}/shell-novice/reference.html" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice/reference/" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#devenyi_gabriel">Gabriel Devenyi</a>,
       <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath</a>
@@ -59,7 +59,7 @@ redirect_from:
     <td>Version Control with Git</td>
     <td><a href="{{site.github_io_url}}/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
     <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="Version Control with Git"></a></td>
-    <td><a href="{{site.github_io_url}}/git-novice/reference.html" target="_blank" class="icon-eye" title="Version Control with Git"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice/reference/" target="_blank" class="icon-eye" title="Version Control with Git"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#gonzalez_ivan">Ivan Gonzalez</a>,
       <a href="{{site.baseurl}}/team/#huang_daisie">Daisie Huang</a>
@@ -69,7 +69,7 @@ redirect_from:
     <td>Version Control with Mercurial</td>
     <td><a href="{{site.github_io_url}}/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
     <td><a href="{{site.github_url}}/hg-novice" target="_blank" class="icon-github" title="Version Control with Mercurial"></a></td>
-    <td><a href="{{site.github_io_url}}/hg-novice/reference.html" target="_blank" class="icon-eye" title="Version Control with Mercurial"></a></td>
+    <td><a href="{{site.github_io_url}}/hg-novice/reference/" target="_blank" class="icon-eye" title="Version Control with Mercurial"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#latornell_d">Doug Latornell</a>
     </td>
@@ -78,7 +78,7 @@ redirect_from:
     <td>Using Databases and SQL</td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey/reference.html" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/reference/" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>,
       <a href="{{site.baseurl}}/team/#mckay_sheldon">Sheldon McKay</a>
@@ -88,7 +88,7 @@ redirect_from:
     <td>Programming with Python</td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
     <td><a href="{{site.github_url}}/python-novice-inflammation" target="_blank" class="icon-github" title="Programming with Python"></a></td>
-    <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="Programming with Python"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference/" target="_blank" class="icon-eye" title="Programming with Python"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#bekolay_trevor">Trevor Bekolay</a>,
       <a href="{{site.baseurl}}/team/#staneva_valentina">Valentina Staneva</a>
@@ -98,7 +98,7 @@ redirect_from:
     <td>Programming with R</td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
     <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="Programming with R"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference/" target="_blank" class="icon-eye" title="Programming with R"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>,
       <a href="{{site.baseurl}}/team/#dashnow_harriet">Harriet Dashnow</a>
@@ -108,7 +108,7 @@ redirect_from:
     <td>R for Reproducible Scientific Analysis</td>
     <td><a href="{{site.github_io_url}}/r-novice-gapminder" target="_blank" class="icon-browser" title="R for Reproducible Scientific Analysis"></a></td>
     <td><a href="{{site.github_url}}/r-novice-gapminder" target="_blank" class="icon-github" title="R for Reproducible Scientific Analysis"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference.html" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference/" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#wright_thomas">Thomas Wright</a>,
       <a href="{{site.baseurl}}/team/#zimmerman_naupaka">Naupaka Zimmerman</a>
@@ -118,7 +118,7 @@ redirect_from:
     <td>Programming with MATLAB</td>
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB"></a></td>
     <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB"></a></td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference.html" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference/" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#kiral-kornek_isabell">Isabell Kiral-Kornek</a>,
       <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath </a>
@@ -128,7 +128,7 @@ redirect_from:
     <td>Automation and Make</td>
     <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make"></a></td>
     <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make"></a></td>
-    <td><a href="{{site.github_io_url}}/make-novice/reference.html" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/reference/" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#capes_gerard">Gerard Capes</a>
     </td>
@@ -137,7 +137,7 @@ redirect_from:
     <td>Instructor Training</td>
     <td><a href="{{site.github_io_url}}/instructor-training" target="_blank" class="icon-browser" title="Instructor Training"></a></td>
     <td><a href="{{site.github_url}}/instructor-training" target="_blank" class="icon-github" title="Instructor Training"></a></td>
-    <td><a href="{{site.github_io_url}}/instructor-training/reference" target="_blank" class="icon-eye" title="Instructor Training"></a></td>
+    <td><a href="{{site.github_io_url}}/instructor-training/reference/" target="_blank" class="icon-eye" title="Instructor Training"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#wilson_g">Greg Wilson</a>
     </td>
