--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -75,6 +75,14 @@ redirect_from:
     {% include orgs/ufl.html %}
   </div>
 </div>
+<div class="row">
+  <div class="medium-6 columns">
+    {% include orgs/jackson-lab.html %}
+  </div>
+  <div class="medium-6 columns">
+    
+  </div>
+</div>
 
 <hr/>
 
