Adding link to instructor discussion pad

--- a/pages/checklists_instructor.html
+++ b/pages/checklists_instructor.html
@@ -94,7 +94,7 @@ redirect_from:
 <h2>After the Workshop</h2>
 <ul>
   <li>
-    Take part in a debriefing session.
+    Take part in an <a href="{{site.pad_url}}/instructor-discussion">instructor discussion session</a>.
   </li>
   <li>
     Complete the instructors' post-workshop questionnaire.
