Use @lexnederbragt words for high table

--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -528,7 +528,7 @@ redirect_from:
   <li>
     <p>
       <strong>High table</strong>
-      to allow instructors be stand when live coding.
+      or one that can be raised, to allow instructors to stand when live coding.
     </p>
   </li>
   <li>
