Adding mailing list signup link

--- a/pages/join.html
+++ b/pages/join.html
@@ -10,6 +10,16 @@ redirect_from:
   <img src="{{site.filesurl}}/workshops/scipy-2015-c-slice.jpg" alt="SciPy 2015" />
 </div>
 
+<div align="center">
+<a href="http://eepurl.com/cfODMH/">
+  <button class="btn">
+    Join our Mailing List
+  </button>
+</a>
+
+</div>
+
+
 <h2 id="instructors">Instructors</h2>
 
 <p>
