--- a/pages/join.html
+++ b/pages/join.html
@@ -9,9 +9,9 @@ redirect_from:
 <div align="center">
   <img src="{{site.filesurl}}/workshops/scipy-2015-c-slice.jpg" alt="SciPy 2015" />
 </div>
-
+<br>
 <div align="center">
-<a href="http://eepurl.com/cfODMH/">
+<a href="http://eepurl.com/cfODMH">
   <button class="btn">
     Join our Mailing List
   </button>
