--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -80,7 +80,7 @@ redirect_from:
     {% include orgs/jackson-lab.html %}
   </div>
   <div class="medium-6 columns">
-    
+
   </div>
 </div>
 
@@ -133,7 +133,7 @@ redirect_from:
     {% include orgs/ucsd.html %}
   </div>
   <div class="medium-6 columns">
-    
+    {% include orgs/caltech.html %}
   </div>
 </div>
 
