Fix #541: correct FAQ link to logo

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -173,7 +173,7 @@ redirect_from:
   <dd>
     <p>
       The name "Software Carpentry" and the
-      <a href="{{site.filesurl}}/software-carpentry-banner.png">Software Carpentry logo</a>
+      <a href="{{site.baseurl}}/img/software-carpentry-banner.png">Software Carpentry logo</a>
       are both trademarked,
       and may only be used with our explicit prior permission.
       We normally grant this to any training course that:
