--- a/pages/scf_members.html
+++ b/pages/scf_members.html
@@ -32,23 +32,18 @@ is made up of:
 </p>
 <table class="table table-striped" id="members">
   <tr>
+    <td>James Adams</td>
     <td>Joshua Adelman</td>
     <td>Aron Ahmadia</td>
-    <td>Matthew Aiello-Lammens</td>
   </tr>
   <tr>
+    <td>Matthew Aiello-Lammens</td>
     <td>Joshua Ainsley</td>
-    <td>Harriet Alexander</td>
     <td>Russell Alleen Willems</td>
   </tr>
   <tr>
     <td>James Allen</td>
-    <td>Pete Alonzi</td>
     <td>Areej Alsheikh-Hussain</td>
-  </tr>
-  <tr>
-    <td>Carlos Anderson</td>
-    <td>Catalina Anghel</td>
     <td>Mario Antonioletti</td>
   </tr>
   <tr>
@@ -57,44 +52,29 @@ is made up of:
     <td>Camille Avestruz</td>
   </tr>
   <tr>
-    <td>Sung Eun Bae</td>
-    <td>Christie Bahlai</td>
+    <td>Sung Bae</td>
     <td>Piotr Banaszkiewicz</td>
-  </tr>
-  <tr>
     <td>Pauline Barmby</td>
-    <td>Diego Barneche</td>
-    <td>Ewan Barr</td>
   </tr>
   <tr>
-    <td>Radovan Bast</td>
-    <td>Dana Bauer</td>
+    <td>Diego Barneche Rosado</td>
     <td>Philipp Bayer</td>
-  </tr>
-  <tr>
-    <td>Rob Beagrie</td>
-    <td>Trevor Bekolay</td>
-    <td>Mahdi Belcaid</td>
-  </tr>
-  <tr>
     <td>Nichole Bennett</td>
-    <td>Miguel Bernabeu</td>
+  </tr>
+  <tr>
+    <td>Jared Berghold</td>
     <td>Michelle Berry</td>
-  </tr>
-  <tr>
     <td>Mik Black</td>
-    <td>Rebecca Blakewood</td>
+  </tr>
+  <tr>
     <td>John Blischak</td>
-  </tr>
-  <tr>
     <td>Maxime Boissonneault</td>
-    <td>Jessica Bonnie</td>
-    <td>James Boocock</td>
+    <td>Azalee Bostroem</td>
   </tr>
   <tr>
-    <td>Darren Boss</td>
-    <td>Azalee Bostroem</td>
     <td>Andrew Boughton</td>
+    <td>Ross Bowman</td>
+    <td>Patrick Boyle</td>
   </tr>
   <tr>
     <td>Erik Bray</td>
@@ -102,224 +82,199 @@ is made up of:
     <td>Amy Brown</td>
   </tr>
   <tr>
-    <td>Kyler Brown</td>
-    <td>C. Titus Brown</td>
-    <td>Jennifer Bryan</td>
-  </tr>
-  <tr>
-    <td>Scott Burns</td>
     <td>Martin Callaghan</td>
-    <td>Jared Camins-Esakov</td>
-  </tr>
-  <tr>
+    <td>Daren Card</td>
     <td>Timothy Cerino</td>
-    <td>Scott Chamberlain</td>
-    <td>Cliburn Chan</td>
   </tr>
   <tr>
+    <td>Cliburn Chan</td>
     <td>Amanda Charbonneau</td>
     <td>Daniel Chen</td>
-    <td>Chelsea Chisholm</td>
   </tr>
   <tr>
-    <td>Shreyas Cholia</td>
     <td>Neil Chue Hong</td>
-    <td>Sophie Clayton</td>
-  </tr>
-  <tr>
-    <td>Sean Cleveland</td>
+    <td>Sarah Clayton</td>
     <td>Warren Code</td>
-    <td>Luis Pedro Coelho</td>
   </tr>
   <tr>
+    <td>Luis Pedro Coelho</td>
     <td>Arliss Collins</td>
     <td>Matthew Collins</td>
-    <td>Victor Cordero</td>
   </tr>
   <tr>
+    <td>Victor Cordero</td>
     <td>John Corless</td>
     <td>Marianne Corvellec</td>
-    <td>Thomas Coudrat</td>
   </tr>
   <tr>
     <td>Logan Cox</td>
-    <td>Stefano Cozzini</td>
     <td>Karen Cranston</td>
+    <td>Stephen Crouch</td>
   </tr>
   <tr>
-    <td>Stephen Crouch</td>
     <td>Remi Daigle</td>
     <td>Harriet Dashnow</td>
-  </tr>
-  <tr>
     <td>Emily Davenport</td>
-    <td>Robert Davey</td>
-    <td>Matt Davis</td>
   </tr>
   <tr>
+    <td>Matt Davis</td>
     <td>Neal Davis</td>
+    <td>Andrew Davison</td>
+  </tr>
+  <tr>
     <td>Raffaella Demichelis</td>
+    <td>Tim Dennis</td>
     <td>Balamurugan Desinghu</td>
   </tr>
   <tr>
-    <td>Gabriel A. Devenyi</td>
-    <td>Ross Dickson</td>
-    <td>Matthew Dimmock</td>
+    <td>James Desjardins</td>
+    <td>Gabriel Devenyi</td>
+    <td>John Didion</td>
   </tr>
   <tr>
     <td>Emily Dolson</td>
+    <td>Westa Domanova</td>
+    <td>David Dotson</td>
+  </tr>
+  <tr>
     <td>Laurent Duchesne</td>
     <td>Jonah Duckles</td>
+    <td>Dirk Eddelbuettel</td>
   </tr>
   <tr>
-    <td>Dirk Eddelbuettel</td>
     <td>Justin Ely</td>
     <td>Rémi Emonet</td>
+    <td>Arthur Endsley</td>
   </tr>
   <tr>
-    <td>Daniel Falster</td>
+    <td>Loïc Estève</td>
     <td>Emmanouil Farsarakis</td>
     <td>Xu Fei</td>
   </tr>
   <tr>
-    <td>Filipe Fernandes</td>
-    <td>Rich FitzJohn</td>
-    <td>Robert Flight</td>
-  </tr>
-  <tr>
+    <td>Selene L. Fernandez-Valverde</td>
     <td>John Fonner</td>
     <td>Christopher Fonnesbeck</td>
+  </tr>
+  <tr>
     <td>Hugues Fontenelle</td>
+    <td>Jes Ford</td>
+    <td>Anne Fouilloux</td>
   </tr>
   <tr>
     <td>Auriel Fournier</td>
     <td>Philip Fowler</td>
-    <td>Bob Freeman</td>
-  </tr>
-  <tr>
-    <td>Chris Friedline</td>
     <td>Zhuo Fu</td>
+  </tr>
+  <tr>
     <td>Emilia Gan</td>
-  </tr>
-  <tr>
+    <td>Paul Gardner</td>
     <td>Aaron Garoutte</td>
-    <td>Chris Gates</td>
+  </tr>
+  <tr>
     <td>Laurent Gatto</td>
-  </tr>
-  <tr>
+    <td>Andre Geldenhuis</td>
     <td>Heather Gibling</td>
-    <td>Molly Gibson</td>
-    <td>Carole Goble</td>
   </tr>
   <tr>
+    <td>Carole Goble</td>
     <td>Ivan Gonzalez</td>
     <td>John Gosset</td>
+  </tr>
+  <tr>
+    <td>Bruno Grande</td>
     <td>Alistair Grant</td>
-  </tr>
-  <tr>
     <td>Jeremy Gray</td>
-    <td>Philippa Griffin</td>
-    <td>Jonathan Gross</td>
   </tr>
   <tr>
+    <td>Jonathan Gross</td>
     <td>Thomas Guignard</td>
     <td>Jiarong Guo</td>
-    <td>Julia Gustavsen</td>
   </tr>
   <tr>
     <td>Tommy Guy</td>
     <td>Jonathan Guyer</td>
+    <td>Melissa Guzman</td>
+  </tr>
+  <tr>
+    <td>Jamie Hadwin</td>
     <td>Denis Haine</td>
-  </tr>
-  <tr>
     <td>Sam Hames</td>
+  </tr>
+  <tr>
     <td>Christopher Hamm</td>
-    <td>Jessica Hamrick</td>
-  </tr>
-  <tr>
     <td>Nic Hannah</td>
-    <td>Michael Hansen</td>
-    <td>Rayna Harris</td>
+    <td>Claire Hardgrove</td>
   </tr>
   <tr>
+    <td>Rayna Harris</td>
     <td>Emelie Harstad</td>
     <td>Ted Hart</td>
+  </tr>
+  <tr>
+    <td>Ian Hawke</td>
+    <td>Wolfgang Hayek</td>
     <td>Fabian Held</td>
   </tr>
   <tr>
-    <td>Josh Herr</td>
+    <td>Joshua Herr</td>
     <td>Kate Hertweck</td>
-    <td>James Hetherington</td>
-  </tr>
-  <tr>
     <td>Konrad Hinsen</td>
-    <td>Amy Hodge</td>
-    <td>Chris Holdgraf</td>
   </tr>
   <tr>
-    <td>Adina Howe</td>
     <td>Daisie Huang</td>
-    <td>Katy Huff</td>
+    <td>Kathryn Huff</td>
+    <td>Fatma Imamoglu</td>
   </tr>
   <tr>
-    <td>Fatma Imamoglu</td>
     <td>Devasena Inupakutika</td>
     <td>Luiz Irber</td>
-  </tr>
-  <tr>
     <td>Damien Irving</td>
-    <td>Paul Ivanov</td>
-    <td>Mike Jackson</td>
   </tr>
   <tr>
+    <td>Mike Jackson</td>
+    <td>Luke Johnston</td>
+    <td>Ben Jolly</td>
+  </tr>
+  <tr>
+    <td>Dan Jones</td>
     <td>Blake Joyce</td>
     <td>Zbigniew Jędrzejewski-Szmek</td>
-    <td>Tom Kelly</td>
   </tr>
   <tr>
-    <td>Jessica Kerr</td>
+    <td>Alix Keener</td>
+    <td>Tom Kelly</td>
+    <td>Kim Keogh</td>
+  </tr>
+  <tr>
     <td>W. Trevor King</td>
     <td>Isabell Kiral-Kornek</td>
+    <td>Shelley Knuth</td>
   </tr>
   <tr>
-    <td>Justin Kitzes</td>
     <td>Christina Koch</td>
-    <td>Steven Koenig</td>
-  </tr>
-  <tr>
-    <td>Alex Koeppel</td>
-    <td>Scott Kolbe</td>
-    <td>Bernhard Konrad</td>
-  </tr>
-  <tr>
-    <td>Igor Kozlov</td>
+    <td>Mateusz Kuzak</td>
     <td>Kwasi Kwakwa</td>
-    <td>Paulina Lach</td>
   </tr>
   <tr>
+    <td>Paulina Lach</td>
     <td>Isabelle Laforest-Lapointe</td>
     <td>Karin Lagesen</td>
-    <td>Sherry Lake</td>
   </tr>
   <tr>
     <td>Jeremiah Lant</td>
-    <td>Chris Lasher</td>
     <td>Doug Latornell</td>
+    <td>Mark Laufersweiler</td>
   </tr>
   <tr>
-    <td>Mark Laufersweiler</td>
     <td>David LeBauer</td>
+    <td>Kate Lee</td>
     <td>Kwangchun Lee</td>
   </tr>
   <tr>
-    <td>Luke Lee</td>
     <td>JC Leyder</td>
-    <td>Matthew Lightman</td>
-  </tr>
-  <tr>
-    <td>Chris Lonnen</td>
     <td>Andrew Lonsdale</td>
-    <td>Elijah Lowe</td>
+    <td>Andrew MacDonald</td>
   </tr>
   <tr>
     <td>Cam Macdonell</td>
@@ -327,243 +282,188 @@ is made up of:
     <td>Cindee Madison</td>
   </tr>
   <tr>
-    <td>Paula Andrea Martinez</td>
+    <td>Tobin Magle</td>
+    <td>Camille Marini</td>
+    <td>Paula Martinez</td>
+  </tr>
+  <tr>
+    <td>Carlos Martinez-Ortiz</td>
     <td>Kunal Marwaha</td>
     <td>Ben Marwick</td>
   </tr>
   <tr>
-    <td>Abigail Cabunoc Mayes</td>
     <td>Sue McClatchy</td>
     <td>Sheldon McKay</td>
-  </tr>
-  <tr>
     <td>Maria McKinley</td>
+  </tr>
+  <tr>
     <td>Cameron McLean</td>
-    <td>Emily Jane McTavish</td>
-  </tr>
-  <tr>
+    <td>Sarah Meister</td>
     <td>Lauren Michael</td>
+  </tr>
+  <tr>
     <td>François Michonneau</td>
-    <td>Brian Miles</td>
-  </tr>
-  <tr>
+    <td>Jackie Milhans</td>
     <td>Bill Mills</td>
+  </tr>
+  <tr>
     <td>Amanda Miotto</td>
-    <td>Meeta Mistry</td>
-  </tr>
-  <tr>
-    <td>Ian Mitchell</td>
     <td>Jason Moore</td>
-    <td>Erika Mudrak</td>
+    <td>Ian Munoz</td>
   </tr>
   <tr>
-    <td>Ian Munoz</td>
-    <td>R. David Murray</td>
+    <td>Ghulam Murtaza</td>
+    <td>Christopher Mędrela</td>
     <td>Joshua Nahum</td>
   </tr>
   <tr>
+    <td>Pariksheet Nanda</td>
     <td>Lex Nederbragt</td>
     <td>Aleksandra Nenadic</td>
-    <td>Daiva Nielsen</td>
   </tr>
   <tr>
-    <td>Jens Hedegaard Nielsen</td>
+    <td>Jens Nielsen</td>
     <td>Klemens Noga</td>
-    <td>Juan Nunez-Iglesias</td>
+    <td>Timothy Norris</td>
   </tr>
   <tr>
+    <td>Juan Nunez-Iglesias</td>
     <td>Aaron O'Leary</td>
-    <td>Randy Olson</td>
     <td>Jeramia Ory</td>
   </tr>
   <tr>
-    <td>Francisco Palm</td>
+    <td>Reid Otsuji</td>
+    <td>Braden Owsley</td>
     <td>Aleksandra Pawlik</td>
-    <td>Jason Pell</td>
   </tr>
   <tr>
     <td>David Perez-Suarez</td>
     <td>Mariela Perignon</td>
-    <td>Giacomo Peru</td>
+    <td>Heidi Perrett</td>
   </tr>
   <tr>
+    <td>Giacomo Peru</td>
     <td>Marian Petre</td>
     <td>Jon Pipitone</td>
-    <td>Adrianna Pińska</td>
   </tr>
   <tr>
+    <td>Adrianna Pińska</td>
     <td>Mark Plumbley</td>
-    <td>Timothee Poisot</td>
-    <td>Tom Pollard</td>
+    <td>Timothée Poisot</td>
   </tr>
   <tr>
     <td>Pawel Pomorski</td>
-    <td>Hossein Pourreza</td>
-    <td>Likit Preeyanon</td>
-  </tr>
-  <tr>
-    <td>Sean Pue</td>
+    <td>Leighton Pritchard</td>
     <td>Narayanan Raghupathy</td>
-    <td>Karthik Ram</td>
   </tr>
   <tr>
     <td>Karina Ramos Musalem</td>
+    <td>Alex Razoumov</td>
     <td>Tom Remenyi</td>
+  </tr>
+  <tr>
     <td>Timothy Rice</td>
-  </tr>
-  <tr>
     <td>Adam Richie-Halford</td>
-    <td>Janet Riley</td>
-    <td>David Rio</td>
+    <td>Kristina Riemer</td>
   </tr>
   <tr>
+    <td>David Rio</td>
     <td>Scott Ritchie</td>
-    <td>James Robinson</td>
-    <td>Natalie Robinson</td>
+    <td>Leah Roberts</td>
   </tr>
   <tr>
     <td>Andrew Rohl</td>
     <td>Ariel Rokem</td>
-    <td>Noam Ross</td>
-  </tr>
-  <tr>
-    <td>William Rowell</td>
     <td>John Rugis</td>
-    <td>Matthew Ruttley</td>
   </tr>
   <tr>
     <td>Maneesha Sane</td>
-    <td>Michael Sarahan</td>
+    <td>Pat Schloss</td>
+    <td>Sebastian Schmeier</td>
+  </tr>
+  <tr>
     <td>Marian Schmidt</td>
-  </tr>
-  <tr>
-    <td>Jorden Schossau</td>
     <td>Rachel Schwartz</td>
-    <td>Anthony Scopatz</td>
-  </tr>
-  <tr>
-    <td>Camille Scott</td>
-    <td>Michael Selik</td>
-    <td>Neem Serra</td>
-  </tr>
-  <tr>
     <td>Albertus Seyffert</td>
-    <td>Genevieve Shattow</td>
-    <td>Jeffrey Shelton</td>
   </tr>
   <tr>
+    <td>Malvika Sharan</td>
     <td>Jennifer Shelton</td>
     <td>Leigh Sheneman</td>
+  </tr>
+  <tr>
     <td>Raniere Silva</td>
-  </tr>
-  <tr>
-    <td>Jack Simpson</td>
     <td>John Simpson</td>
-    <td>Rachel Slaybaugh</td>
+    <td>Abel Siqueira</td>
   </tr>
   <tr>
-    <td>Clare Sloggett</td>
     <td>Luc Small</td>
+    <td>Allison Smith</td>
     <td>Byron Smith</td>
   </tr>
   <tr>
     <td>Daniel Smith</td>
-    <td>Joshua Smith</td>
-    <td>Mike Smorul</td>
-  </tr>
-  <tr>
     <td>Nancy Soontiens</td>
-    <td>Ashwin Trikuta Srinath</td>
+    <td>Ashwin Srinath</td>
+  </tr>
+  <tr>
     <td>Pier-Luc St-Onge</td>
-  </tr>
-  <tr>
     <td>Mark Stacy</td>
-    <td>Daniel Standage</td>
-    <td>Mitchell Stanton-Cook</td>
-  </tr>
-  <tr>
-    <td>Meg Staton</td>
     <td>Sarah Stevens</td>
-    <td>Mark Stillwell</td>
   </tr>
   <tr>
+    <td>Mark Stillwell</td>
     <td>Adam Stone</td>
     <td>Jonathan Strootman</td>
-    <td>Shoaib Sufi</td>
   </tr>
   <tr>
+    <td>Brian Stucky</td>
     <td>Michael Sumner</td>
     <td>Arvind Sundaram</td>
-    <td>Sarah Supp</td>
   </tr>
   <tr>
     <td>Gayathri Swaminathan</td>
-    <td>Bradley Taber-Thomas</td>
-    <td>Scott Talafuse</td>
-  </tr>
-  <tr>
     <td>Leszek Tarkowski</td>
     <td>Rachael Tatman</td>
-    <td>Tracy Teal</td>
   </tr>
   <tr>
+    <td>Bartosz Telenczuk</td>
     <td>Kaitlin Thaney</td>
-    <td>Sam Thomson</td>
-    <td>Robert Till</td>
+    <td>Adam Thomas</td>
   </tr>
   <tr>
+    <td>Amali Thrimawithana</td>
     <td>Tiffany Timbers</td>
-    <td>Will Trimble</td>
     <td>Daniel Turek</td>
   </tr>
   <tr>
-    <td>Stephen Turner</td>
-    <td>Fiona Tweedie</td>
     <td>Daniela Ushizima</td>
-  </tr>
-  <tr>
     <td>Olav Vahtras</td>
     <td>Ramnath Vaidyanathan</td>
-    <td>Roman Valls Guimera</td>
   </tr>
   <tr>
-    <td>Anelda van der Walt</td>
-    <td>Vicky Varga</td>
-    <td>Nelle Varoquaux</td>
-  </tr>
-  <tr>
-    <td>Bogdan Vera</td>
-    <td>Alex Viana</td>
-    <td>Jens von der Linden</td>
-  </tr>
-  <tr>
-    <td>Leanne Wake</td>
+    <td>Thea Van Rossum</td>
+    <td>Kevin Vilbig</td>
     <td>Andrew Walker</td>
+  </tr>
+  <tr>
     <td>Alistair Walsh</td>
-  </tr>
-  <tr>
-    <td>Dan Warren</td>
-    <td>Leah Wasser</td>
     <td>Ben Waugh</td>
-  </tr>
-  <tr>
     <td>Belinda Weaver</td>
-    <td>Ben Weinstein</td>
-    <td>Easton White</td>
   </tr>
   <tr>
+    <td>Ben Weinstein</td>
+    <td>Daniel Wheeler</td>
     <td>Ethan White</td>
+  </tr>
+  <tr>
     <td>Samuel White</td>
     <td>Tyson Whitehead</td>
-  </tr>
-  <tr>
-    <td>Asela Wijeratne</td>
     <td>Mark Wilber</td>
-    <td>Chandler Wilkerson</td>
   </tr>
   <tr>
+    <td>Dave Williams</td>
     <td>Jason Williams</td>
-    <td>Lynne Williams</td>
     <td>Carol Willing</td>
   </tr>
   <tr>
@@ -572,18 +472,18 @@ is made up of:
     <td>Donny Winston</td>
   </tr>
   <tr>
-    <td>Kara Woo</td>
-    <td>April Wright</td>
     <td>Tom Wright</td>
+    <td>Fan Yang</td>
+    <td>Lynn Young</td>
   </tr>
   <tr>
-    <td>Fan Yang</td>
     <td>Constantine Zakkaroff</td>
     <td>Naupaka Zimmerman</td>
+    <td>Andrea Zonca</td>
   </tr>
   <tr>
-    <td>Tiziano Zito</td>
-    <td>Andrea Zonca</td>
-    <td></td>
+    <td>Peter van Heusden</td>
+    <td>Anelda van der Walt</td>
+    <td>Jens von der Linden</td>
   </tr>
 </table>
