a couple of logos

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -114,6 +114,14 @@ redirect_from:
 </div>
 <div class="row">
   <div class="medium-6 columns">
+   {% include orgs/oslo.html %}
+  </div>
+  <div class="medium-6 columns">
+   {% include orgs/uwmadison.html %}
+  </div>
+</div>
+<div class="row">
+  <div class="medium-6 columns">
     {% include orgs/umelbourne.html %}
   </div>
   <div class="medium-6 columns">
