--- a/pages/conduct.html
+++ b/pages/conduct.html
@@ -1,9 +1,9 @@
 ---
-layout: page-fullwidth
-permalink: /conduct/
-title: Code of Conduct
-redirect_from:
-  - /conduct.html
+#layout: page-fullwidth
+#permalink: /conduct/
+#title: Code of Conduct
+#redirect_from:
+#  - /conduct.html
 ---
 <p>
   Software Carpentry workshops are community events intended for
