--- a/pages/audience.html
+++ b/pages/audience.html
@@ -8,7 +8,7 @@ redirect_from:
 <div class="row">
   <div class="medium-3 columns">
     <h2>Bhadra Basepair</h2>
-    <img src="{{site.filesurl}}/cartoons/bhadra_basepair_179x237.png" alt="Bhadra Basepair" />
+    <img src="{{site.filesurl}}/cartoons/bhadra_basepair_179x237.png" alt="Bhadra Basepair, standing in front of a biochemistry lab bench" />
   </div>
   <div class="medium-9 columns">
     <p>
@@ -47,6 +47,11 @@ redirect_from:
       but hasn't been able to find time.
     </p>
     <p>
+      Bhandra is quite nearsighted, and uses high-contrast fonts on her computer 
+      and a portable text magnifier when reading paper documents.
+    </p>
+  
+    <p>
       Software Carpentry will teach Bhadra how to automate this task
       by writing simple scripts to retrieve, process, and reply to email queries.
       Those scripts will automatically record inputs and outputs
@@ -60,12 +65,12 @@ redirect_from:
 <div class="row">
   <div class="medium-3 columns">
     <h2>Fan Fullerene</h2>
-    <img src="{{site.filesurl}}/cartoons/fan_fullerene_182x254.png" alt="Fan Fullerene" />
+    <img src="{{site.filesurl}}/cartoons/fan_fullerene_182x254.png" alt="Fan Fullerene, standing in front of several plots, which are pinned to a bulliten board." />
   </div>
   <div class="medium-9 columns">
     <p>
       Fan Fullerene is a graduate student in chemistry
-      who is working as a lab technician to help cover his costs.
+      who is working as a lab technician to help cover his family's living costs.
       His only programming experience is a general first-year introduction to computational science
       using Python.
     </p>
@@ -92,6 +97,11 @@ redirect_from:
       along with the original data file.
     </p>
     <p>
+      Fan and his wife have had two children arrive while in graduate school, 
+      and his research progress is behind that of his peers.  
+      He is very nervous about finishing his PhD and siffers from undiagnosed depression.
+     </p>
+    <p>
       Software Carpentry will teach Fan how to write programs
       to generate parameter files and analyze experimental results,
       and how to track the provenance of the data he is working with
@@ -106,7 +116,7 @@ redirect_from:
 <div class="row">
   <div class="medium-3 columns">
     <h2>Helen Helmet</h2>
-    <img src="{{site.filesurl}}/cartoons/helen_helmet_156x217.png" alt="Helen Helmet" />
+    <img src="{{site.filesurl}}/cartoons/helen_helmet_156x217.png" alt="Helen Helmet, standing in front of a lab bench, wearing one of the helments that she's about to test." />
   </div>
   <div class="medium-9 columns">
     <p>
@@ -144,6 +154,8 @@ redirect_from:
       to try to track down the bug,
       but still doesn't know where it is.
     </p>
+    <p>Helen has been diagnosed with celiac disease.
+    </p>
     <p>
       Software Carpentry will teach Helen
       to develop and modify programs in a disciplined way,
@@ -156,7 +168,7 @@ redirect_from:
 <div class="row">
   <div class="medium-3 columns">
     <h2>Mehrdad Mapping</h2>
-    <img src="{{site.filesurl}}/cartoons/mehrdad_mapping_187x242.png" alt="Mehrdad Mapping" />
+    <img src="{{site.filesurl}}/cartoons/mehrdad_mapping_187x242.png" alt="Mehrdad Mapping, standing in a snowy forest of pine trees" />
   </div>
   <div class="medium-9 columns">
     <p>
@@ -179,6 +191,9 @@ redirect_from:
       His task now is to clean up and analyze both sets of measurements
       so that he can start to correlate changes in bark beetle distribution
       with changes in climate.
+    </p>
+    <p>
+      In high school, Mehrdad was diagnosed with Attention Deficit Disorder, which he learned to manage.    
     </p>
     <p>
       Software Carpentry will teach Mehrdad how to standardize, merge, and set up basic analyses for these data sets,
