--- a/pages/audience.html
+++ b/pages/audience.html
@@ -99,7 +99,7 @@ redirect_from:
     <p>
       Fan and his wife have had two children arrive while in graduate school, 
       and his research progress is behind that of his peers.  
-      He is very nervous about finishing his PhD and siffers from undiagnosed depression.
+      He is very nervous about finishing his PhD and suffers from undiagnosed depression.
      </p>
     <p>
       Software Carpentry will teach Fan how to write programs
