Minor typos picked up during instructor training

--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -6,7 +6,7 @@ redirect_from:
   - /workshops/request.html
 ---
 <p>
-  If would like to host a Software Carpentry workshop at your
+  If you would like to host a Software Carpentry workshop at your
   institution, please fill in the form below to let us know a bit more
   about your needs and someone will contact you as soon as
   possible. For more information on how our workshops are run, please
