--- a/pages/scf.html
+++ b/pages/scf.html
@@ -158,6 +158,7 @@ redirect_from:
   <div class="medium-2 columns">
     <h3>2016</h3>
     <ul>
+      <li><a href="{{page.minutes}}/minutes-2016-11-02.md">2016-11-02</a></li>
       <li><a href="{{page.minutes}}/minutes-2016-10-06.md">2016-10-06</a></li>
       <li><a href="{{page.minutes}}/minutes-2016-09-08.md">2016-09-08</a></li>
       <li><a href="{{page.minutes}}/minutes-2016-08-11.md">2016-08-11</a></li>
