SCF members for 2017 election

--- a/pages/scf_members.html
+++ b/pages/scf_members.html
@@ -40,49 +40,49 @@ is made up of:
   <tr>
     <td>Joshua Ainsley</td>
     <td>Russell Alleen Willems</td>
-    <td>James Allen</td>
     <td>Areej Alsheikh-Hussain</td>
+    <td>Markus Ankenbrand</td>
   </tr>
   <tr>
     <td>Mario Antonioletti</td>
     <td>Jorge Aranda</td>
-    <td>Dhavide Aruliah</td>
     <td>Camille Avestruz</td>
+    <td>Sung Bae</td>
   </tr>
   <tr>
-    <td>Sung Bae</td>
+    <td>Asher Baltzell</td>
     <td>Piotr Banaszkiewicz</td>
     <td>Pauline Barmby</td>
-    <td>Diego Barneche Rosado</td>
+    <td>Philipp Bayer</td>
   </tr>
   <tr>
-    <td>Philipp Bayer</td>
     <td>Nichole Bennett</td>
     <td>Jared Berghold</td>
     <td>Michelle Berry</td>
+    <td>Mik Black</td>
   </tr>
   <tr>
-    <td>Mik Black</td>
     <td>John Blischak</td>
     <td>Maxime Boissonneault</td>
     <td>Azalee Bostroem</td>
+    <td>Andrew Boughton</td>
   </tr>
   <tr>
-    <td>Andrew Boughton</td>
     <td>Ross Bowman</td>
     <td>Patrick Boyle</td>
-    <td>Erik Bray</td>
-  </tr>
-  <tr>
     <td>Karl Broman</td>
     <td>Amy Brown</td>
+  </tr>
+  <tr>
+    <td>Kyler Brown</td>
+    <td>Murray Cadzow</td>
     <td>Martin Callaghan</td>
     <td>Daren Card</td>
   </tr>
   <tr>
-    <td>Timothy Cerino</td>
     <td>Cliburn Chan</td>
     <td>Amanda Charbonneau</td>
+    <td>Billy Charlton</td>
     <td>Daniel Chen</td>
   </tr>
   <tr>
@@ -107,174 +107,174 @@ is made up of:
     <td>Remi Daigle</td>
     <td>Harriet Dashnow</td>
     <td>Emily Davenport</td>
-    <td>Matt Davis</td>
+    <td>Neal Davis</td>
   </tr>
   <tr>
-    <td>Neal Davis</td>
     <td>Andrew Davison</td>
     <td>Raffaella Demichelis</td>
     <td>Tim Dennis</td>
-  </tr>
-  <tr>
     <td>Balamurugan Desinghu</td>
-    <td>James Desjardins</td>
-    <td>Gabriel Devenyi</td>
-    <td>Emily Dolson</td>
   </tr>
   <tr>
+    <td>James Desjardins</td>
+    <td>John Didion</td>
+    <td>Emily Dolson</td>
     <td>Westa Domanova</td>
+  </tr>
+  <tr>
     <td>David Dotson</td>
     <td>Laurent Duchesne</td>
     <td>Jonah Duckles</td>
+    <td>Dirk Eddelbuettel</td>
   </tr>
   <tr>
-    <td>Dirk Eddelbuettel</td>
     <td>Justin Ely</td>
     <td>Rémi Emonet</td>
     <td>Arthur Endsley</td>
+    <td>Loïc Estève</td>
   </tr>
   <tr>
-    <td>Loïc Estève</td>
     <td>Emmanouil Farsarakis</td>
     <td>Xu Fei</td>
     <td>Selene L. Fernandez-Valverde</td>
+    <td>John Fonner</td>
   </tr>
   <tr>
-    <td>John Fonner</td>
     <td>Christopher Fonnesbeck</td>
     <td>Hugues Fontenelle</td>
     <td>Jes Ford</td>
-  </tr>
-  <tr>
     <td>Anne Fouilloux</td>
+  </tr>
+  <tr>
     <td>Auriel Fournier</td>
-    <td>Philip Fowler</td>
     <td>Zhuo Fu</td>
-  </tr>
-  <tr>
-    <td>Emilia Gan</td>
+    <td>Konrad Förstner</td>
     <td>Paul Gardner</td>
-    <td>Aaron Garoutte</td>
-    <td>Laurent Gatto</td>
   </tr>
   <tr>
+    <td>Aaron Garoutte</td>
     <td>Andre Geldenhuis</td>
+    <td>Akima George</td>
     <td>Heather Gibling</td>
+  </tr>
+  <tr>
     <td>Carole Goble</td>
     <td>Ivan Gonzalez</td>
-  </tr>
-  <tr>
     <td>John Gosset</td>
     <td>Bruno Grande</td>
-    <td>Alistair Grant</td>
-    <td>Jeremy Gray</td>
   </tr>
   <tr>
+    <td>Jeremy Gray</td>
     <td>Jonathan Gross</td>
     <td>Thomas Guignard</td>
     <td>Jiarong Guo</td>
-    <td>Jonathan Guyer</td>
   </tr>
   <tr>
+    <td>Jonathan Guyer</td>
     <td>Melissa Guzman</td>
     <td>Jamie Hadwin</td>
-    <td>Denis Haine</td>
     <td>Sam Hames</td>
   </tr>
   <tr>
     <td>Christopher Hamm</td>
+    <td>Nic Hannah</td>
     <td>Claire Hardgrove</td>
     <td>Rayna Harris</td>
-    <td>Emelie Harstad</td>
   </tr>
   <tr>
+    <td>Emelie Harstad</td>
     <td>Ted Hart</td>
     <td>Ian Hawke</td>
     <td>Wolfgang Hayek</td>
-    <td>Fabian Held</td>
   </tr>
   <tr>
+    <td>Fabian Held</td>
+    <td>Tania Hernandez</td>
     <td>Joshua Herr</td>
     <td>Kate Hertweck</td>
+  </tr>
+  <tr>
     <td>Konrad Hinsen</td>
     <td>Daisie Huang</td>
-  </tr>
-  <tr>
     <td>Kathryn Huff</td>
     <td>Fatma Imamoglu</td>
+  </tr>
+  <tr>
     <td>Devasena Inupakutika</td>
     <td>Luiz Irber</td>
+    <td>Damien Irving</td>
+    <td>Warren Jacobus</td>
   </tr>
   <tr>
-    <td>Damien Irving</td>
-    <td>Mike Jackson</td>
     <td>Luke Johnston</td>
     <td>Ben Jolly</td>
-  </tr>
-  <tr>
     <td>Dan Jones</td>
     <td>Blake Joyce</td>
-    <td>Zbigniew Jędrzejewski-Szmek</td>
-    <td>Alix Keener</td>
   </tr>
   <tr>
+    <td>Zbigniew Jędrzejewski-Szmek</td>
+    <td>Ivana Kajić</td>
+    <td>Alix Keener</td>
     <td>Tom Kelly</td>
+  </tr>
+  <tr>
     <td>Kim Keogh</td>
     <td>W. Trevor King</td>
     <td>Isabell Kiral-Kornek</td>
+    <td>Shelley Knuth</td>
   </tr>
   <tr>
-    <td>Shelley Knuth</td>
     <td>Christina Koch</td>
     <td>Mateusz Kuzak</td>
     <td>Kwasi Kwakwa</td>
+    <td>Paulina Lach</td>
   </tr>
   <tr>
-    <td>Paulina Lach</td>
     <td>Isabelle Laforest-Lapointe</td>
     <td>Karin Lagesen</td>
     <td>Jeremiah Lant</td>
+    <td>Doug Latornell</td>
   </tr>
   <tr>
-    <td>Doug Latornell</td>
     <td>Mark Laufersweiler</td>
     <td>David LeBauer</td>
     <td>Kate Lee</td>
+    <td>Kwangchun Lee</td>
   </tr>
   <tr>
-    <td>Kwangchun Lee</td>
     <td>JC Leyder</td>
+    <td>Gang Liu</td>
     <td>Andrew Lonsdale</td>
     <td>Andrew MacDonald</td>
   </tr>
   <tr>
     <td>Cam Macdonell</td>
-    <td>Gary Macindoe</td>
     <td>Cindee Madison</td>
+    <td>Tobin Magle</td>
     <td>Camille Marini</td>
   </tr>
   <tr>
     <td>Paula Martinez</td>
+    <td>Carlos Martinez-Ortiz</td>
     <td>Kunal Marwaha</td>
     <td>Ben Marwick</td>
+  </tr>
+  <tr>
+    <td>Sergey Mashchenko</td>
     <td>Sue McClatchy</td>
-  </tr>
-  <tr>
     <td>Sheldon McKay</td>
-    <td>Maria McKinley</td>
     <td>Cameron McLean</td>
-    <td>Sarah Meister</td>
   </tr>
   <tr>
+    <td>Sarah Meister</td>
     <td>Lauren Michael</td>
     <td>François Michonneau</td>
     <td>Jackie Milhans</td>
-    <td>Bill Mills</td>
   </tr>
   <tr>
+    <td>Bill Mills</td>
     <td>Amanda Miotto</td>
     <td>Jason Moore</td>
-    <td>Ian Munoz</td>
     <td>Ghulam Murtaza</td>
   </tr>
   <tr>
@@ -285,32 +285,32 @@ is made up of:
   </tr>
   <tr>
     <td>Aleksandra Nenadic</td>
-    <td>Jens Nielsen</td>
     <td>Klemens Noga</td>
     <td>Timothy Norris</td>
+    <td>Juan Nunez-Iglesias</td>
   </tr>
   <tr>
-    <td>Juan Nunez-Iglesias</td>
     <td>Aaron O'Leary</td>
     <td>Reid Otsuji</td>
     <td>Braden Owsley</td>
+    <td>Aleksandra Pawlik</td>
   </tr>
   <tr>
-    <td>Aleksandra Pawlik</td>
     <td>David Perez-Suarez</td>
     <td>Mariela Perignon</td>
     <td>Heidi Perrett</td>
+    <td>Giacomo Peru</td>
   </tr>
   <tr>
-    <td>Giacomo Peru</td>
     <td>Marian Petre</td>
     <td>Jon Pipitone</td>
     <td>Adrianna Pińska</td>
+    <td>Mark Plumbley</td>
   </tr>
   <tr>
-    <td>Mark Plumbley</td>
     <td>Timothée Poisot</td>
     <td>Pawel Pomorski</td>
+    <td>Leighton Pritchard</td>
     <td>Narayanan Raghupathy</td>
   </tr>
   <tr>
@@ -327,39 +327,45 @@ is made up of:
   </tr>
   <tr>
     <td>Leah Roberts</td>
+    <td>James Robinson</td>
     <td>Andrew Rohl</td>
     <td>Ariel Rokem</td>
-    <td>John Rugis</td>
   </tr>
   <tr>
+    <td>John Rugis</td>
     <td>Maneesha Sane</td>
     <td>Pat Schloss</td>
     <td>Sebastian Schmeier</td>
-    <td>Marian Schmidt</td>
   </tr>
   <tr>
+    <td>Hartmut Schmider</td>
+    <td>Marian Schmidt</td>
     <td>Rachel Schwartz</td>
     <td>Albertus Seyffert</td>
+  </tr>
+  <tr>
     <td>Malvika Sharan</td>
     <td>Jennifer Shelton</td>
-  </tr>
-  <tr>
     <td>Leigh Sheneman</td>
     <td>Raniere Silva</td>
+  </tr>
+  <tr>
     <td>John Simpson</td>
     <td>Abel Siqueira</td>
-  </tr>
-  <tr>
     <td>Luc Small</td>
     <td>Allison Smith</td>
-    <td>Byron Smith</td>
-    <td>Daniel Smith</td>
   </tr>
   <tr>
+    <td>Byron Smith</td>
+    <td>Daniel Smith</td>
     <td>Nancy Soontiens</td>
     <td>Ashwin Srinath</td>
+  </tr>
+  <tr>
     <td>Pier-Luc St-Onge</td>
     <td>Mark Stacy</td>
+    <td>Jeff Stafford</td>
+    <td>Valentina Staneva</td>
   </tr>
   <tr>
     <td>Sarah Stevens</td>
@@ -371,30 +377,30 @@ is made up of:
     <td>Brian Stucky</td>
     <td>Michael Sumner</td>
     <td>Arvind Sundaram</td>
-    <td>Leszek Tarkowski</td>
+    <td>Marc Sze</td>
   </tr>
   <tr>
+    <td>Leszek Tarkowski</td>
     <td>Rachael Tatman</td>
     <td>Bartosz Telenczuk</td>
     <td>Kaitlin Thaney</td>
-    <td>Adam Thomas</td>
   </tr>
   <tr>
+    <td>Adam Thomas</td>
     <td>Amali Thrimawithana</td>
     <td>Tiffany Timbers</td>
     <td>Daniel Turek</td>
-    <td>Daniela Ushizima</td>
   </tr>
   <tr>
+    <td>Daniela Ushizima</td>
     <td>Olav Vahtras</td>
     <td>Ramnath Vaidyanathan</td>
     <td>Anelda van der Walt</td>
-    <td>Peter van Heusden</td>
   </tr>
   <tr>
+    <td>Peter van Heusden</td>
     <td>Thea Van Rossum</td>
     <td>Kevin Vilbig</td>
-    <td>Jens von der Linden</td>
     <td>Andrew Walker</td>
   </tr>
   <tr>
@@ -405,31 +411,31 @@ is made up of:
   </tr>
   <tr>
     <td>Daniel Wheeler</td>
+    <td>Easton White</td>
     <td>Ethan White</td>
     <td>Samuel White</td>
-    <td>Tyson Whitehead</td>
   </tr>
   <tr>
+    <td>Tyson Whitehead</td>
     <td>Mark Wilber</td>
     <td>Dave Williams</td>
     <td>Jason Williams</td>
-    <td>Carol Willing</td>
   </tr>
   <tr>
+    <td>Carol Willing</td>
     <td>Greg Wilson</td>
     <td>Paul Wilson</td>
     <td>Donny Winston</td>
-    <td>Tom Wright</td>
   </tr>
   <tr>
+    <td>Tom Wright</td>
     <td>Fan Yang</td>
     <td>Lynn Young</td>
     <td>Constantine Zakkaroff</td>
-    <td>Naupaka Zimmerman</td>
   </tr>
   <tr>
+    <td>Naupaka Zimmerman</td>
     <td>Andrea Zonca</td>
-    <td></td>
     <td></td>
     <td></td>
   </tr>
