clarify what a self organized workshop is

--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -42,7 +42,10 @@ redirect_from:
     <p>
       Software Carpentry welcomes you to organize and run your own workshop
       without administrative assistance from the Software Carpentry Foundation
-      <strong>by optional donation</strong>. In order to use the
+      <strong>by optional donation</strong>. This means you are already connected 
+      with our certified instructors and will work with them on all aspects of 
+      workshop organization, including curriculum and lesson planning
+      as well as logistical details such as student registration.  In order to use the
       Software Carpentry name and logo at your event, we only
       require that you follow our curriculum, have at least one badged instructor teaching and
       co-organizing your event, and <a href="mailto:{{site.contact}}">let us know</a>
