--- a/pages/subcom_mentorship.html
+++ b/pages/subcom_mentorship.html
@@ -28,6 +28,9 @@ members:
   - name:  "Daniel Chen"
     twitter: "@chendaniely"
     twitterURL: "https://twitter.com/chendaniely"  
+  - name: "Erin Becker"
+    twitter: "@ErinSBecker"
+    twitterURL: "https://twitter.com/ErinSBecker/"
   - name: "Karin Lagesen"
     twitter: "@karinlag"
     twitterURL: "https://twitter.com/karinlag"   
