Changing partner to org member

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -4,6 +4,7 @@ permalink: /scf/partners/
 title: Our Partners
 redirect_from:
   - /scf/supporters.html
+  - /scf/orgmembers
 ---
 <div class="row">
   <div class="medium-6 columns">
@@ -33,7 +34,7 @@ redirect_from:
 
 <hr/>
 
-<h2>Gold Partners</h2>
+<h2>Gold Member Organizations</h2>
 
 <div class="row">
   <div class="medium-6 columns">
@@ -86,7 +87,7 @@ redirect_from:
 
 <hr/>
 
-<h2>Silver Partners</h2>
+<h2>Silver Member Organizations</h2>
 
 <div class="row">
   <div class="medium-6 columns">
