--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -34,6 +34,28 @@ redirect_from:
 
 <hr/>
 
+<h2>Platinum Member Organizations</h2>
+
+<div class="row">
+  <div class="medium-6 columns">
+    {% include orgs/nesi.html %}
+  </div>
+  <div class="medium-6 columns">
+    {% include orgs/uw-escience.html %}
+  </div>
+</div>
+<div class="row">
+  <div class="medium-6 columns">
+    {% include orgs/uwmadison.html %}
+  </div>
+  <div class="medium-6 columns">
+
+  </div>
+</div>
+
+
+
+
 <h2>Gold Member Organizations</h2>
 
 <div class="row">
@@ -46,7 +68,7 @@ redirect_from:
 </div>
 <div class="row">
   <div class="medium-6 columns">
-    {% include orgs/github.html %}
+      {% include orgs/jackson-lab.html %}
   </div>
   <div class="medium-6 columns">
     {% include orgs/cyverse.html %}
@@ -62,7 +84,7 @@ redirect_from:
 </div>
 <div class="row">
   <div class="medium-6 columns">
-    {% include orgs/rackspace.html %}
+    {% include orgs/ukmo.html %}
   </div>
   <div class="medium-6 columns">
     {% include orgs/ssi.html %}
@@ -70,15 +92,15 @@ redirect_from:
 </div>
 <div class="row">
   <div class="medium-6 columns">
-    {% include orgs/uw-escience.html %}
+    {% include orgs/ufl.html %}
   </div>
   <div class="medium-6 columns">
-    {% include orgs/ufl.html %}
+    {% include orgs/ucsf.html %}
   </div>
 </div>
 <div class="row">
   <div class="medium-6 columns">
-    {% include orgs/jackson-lab.html %}
+    {% include orgs/macquarie.html %}
   </div>
   <div class="medium-6 columns">
 
@@ -102,33 +124,24 @@ redirect_from:
     {% include orgs/michigan-state.html %}
   </div>
   <div class="medium-6 columns">
-    {% include orgs/nesi.html %}
+    {% include orgs/nlesc.html %}
   </div>
 </div>
 <div class="row">
-  <div class="medium-6 columns">
-    {% include orgs/nlesc.html %}
-  </div>
   <div class="medium-6 columns">
     {% include orgs/ucar.html %}
   </div>
-</div>
-<div class="row">
   <div class="medium-6 columns">
     {% include orgs/uc-davis.html %}
   </div>
-  <div class="medium-6 columns">
-    {% include orgs/ucl.html %}
-  </div>
 </div>
 <div class="row">
   <div class="medium-6 columns">
-   {% include orgs/oslo.html %}
+    {% include orgs/ucl.html %}
   </div>
   <div class="medium-6 columns">
-   {% include orgs/uwmadison.html %}
+    {% include orgs/oslo.html %}
   </div>
-</div>
 <div class="row">
   <div class="medium-6 columns">
     {% include orgs/umelbourne.html %}
@@ -145,6 +158,15 @@ redirect_from:
     {% include orgs/caltech.html %}
   </div>
 </div>
+<div class="row">
+  <div class="medium-6 columns">
+    {% include orgs/oxford.html %}
+  </div>
+  <div class="medium-6 columns">
+  </div>
+
+</div>
+
 
 <hr/>
 
@@ -152,12 +174,22 @@ redirect_from:
 
 <div class="row">
   <div class="medium-6 columns">
-    {% include orgs/insight-data-science.html %}
-  </div>
-  <div class="medium-6 columns">
     {% include orgs/rstudio.html %}
   </div>
+  <div class="medium-6 columns">
+
+  </div>
 </div>
+
+<div class="row">
+  <div class="medium-6 columns">
+    {% include orgs/rackspace.html %}
+</div>
+  <div class="medium-6 columns">
+    {% include orgs/github.html %}
+  </div>
+</div>
+
 
 <hr/>
 
@@ -231,8 +263,9 @@ redirect_from:
 </div>
 <div class="row">
   <div class="medium-6 columns">
-    {% include orgs/ukmo.html %}
+
   </div>
   <div class="medium-6 columns">
+    {% include orgs/insight-data-science.html %}
   </div>
 </div>
