--- a/pages/join.html
+++ b/pages/join.html
@@ -46,11 +46,13 @@ There are two steps to becoming an instructor:
 
 <p align="center">
   <em>
-    Registration for the Fall 2016 training courses is now closed, but
-    we are still accepting applications for subsequent courses.  If
-    you would like to apply, or are taking the course through one of
-    our partner organizations and have been asked to provide information,
-    please fill in <a href="{{site.amy_url}}/request_training/">this form</a>.
+    Most of our instructors are trained through organizational agreements 
+    with affiliated institutions. If you have been asked to provide 
+    information associated with this type of training, 
+    please fill in <a href="{{site.amy_url}}/request_training/">this form</a>. 
+    If you are not affiliated with one of our partner organizations, we offer limited 
+    scholarships to attend online instructor training. Please fill out the form above to 
+    indicate your interest in participating in an upcoming instructor training.
   </em>
 </p>
 
