Fix anchor tag: #report -> #host-report

--- a/pages/checklists_host.html
+++ b/pages/checklists_host.html
@@ -393,7 +393,7 @@ redirect_from:
   </li>
   <li>
     <p>
-      <a href="{{site.baseurl}}/workshops/operations/#report">Let us know</a>
+      <a href="{{site.baseurl}}/workshops/operations/#host-report">Let us know</a>
       how the workshop went.
     </p>
   </li>
