Add links to preview surveys

--- a/pages/checklists_admin.html
+++ b/pages/checklists_admin.html
@@ -102,17 +102,41 @@ redirect_from:
   <li>
     <p>
       Set up the
-      <a href="{{site.baseurl}}/workshops/operations/#admin_assessment">pre-workshop assessment questionnaire</a>
+      <a href="{{site.baseurl}}/workshops/operations/#admin_assessment">pre-workshop survey</a>
       and ask the host to distribute it to learners.
     </p>
   </li>
+  
   <li>
     <p>
       Set up the
-      <a href="{{site.baseurl}}/workshops/operations/#post_assessment">post-workshop assessment questionnaire</a>
+      <a href="{{site.baseurl}}/workshops/operations/#post_assessment">post-workshop survey</a>
       to be distributed at the end of the workshop.
     </p>
   </li>
+  
+   <li>
+    <p>Workshop surveys can be previewed here:
+    <ul>
+    <li>As if you were taking the survey live, but responses will not be recorded</li>
+        <ul>
+          <li><a href="https://www.surveymonkey.com/r/Preview/?sm=V6gQbbOKn3NoPKfYKHjAKu_2BBCdtXXsTS2pf1BIdARccEtJQqlu1KFB2j2TcF0MCn">Pre workshop survey</a></li>
+          <li><a href="https://www.surveymonkey.com/r/Preview/?sm=uN5QPa4MbF1_2BB1plbLWnL1ZUc7Nttqici0Nc0e3G4RahMwwGW5NUp4U5PKQDYmky">Post workshop survey</a></li>
+        </ul>
+
+
+    <li>PDF of the survey questions and format</li>
+        <ul>
+          <li><a href="http://static.software-carpentry.org/swc_pre_survey.pdf">Pre workshop survey</a></li>
+          <li><a href="http://static.software-carpentry.org/swc_post_survey.pdf">Post workshop survey</a></li>
+        </ul>
+
+  </ul>
+
+  </p>
+  </li>
+  
+  
 </ul>
 
 <h2>A Week Before</h2>
