Exec Dir should not be checking in on each workshop

--- a/pages/checklists_admin.html
+++ b/pages/checklists_admin.html
@@ -143,18 +143,13 @@ redirect_from:
 <ul>
   <li>
     <p>
-      Remind the Executive Director to mail the instructors to wish them luck.
+      Check in with the instructors and hosts to be sure they are ready for the workshop.
     </p>
   </li>
   <li>
     <p>
       If there are cancellations,
       offer tickets to people on the <a href="{{site.baseurl}}/workshops/operations/#waiting_list">waiting list</a>.
-    </p>
-  </li>
-  <li>
-    <p>
-      Make sure everything is going smoothly.
     </p>
   </li>
 </ul>
