--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -139,7 +139,8 @@ redirect_from:
     <td><a href="{{site.github_url}}/instructor-training" target="_blank" class="icon-github" title="Instructor Training"></a></td>
     <td><a href="{{site.github_io_url}}/instructor-training/reference/" target="_blank" class="icon-eye" title="Instructor Training"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#wilson_g">Greg Wilson</a>
+      <a href="{{site.baseurl}}/team/#becker_erin">Erin Becker</a>
+      <a href="{{site.baseurl}}/team/#koch_christina.html">Christina Koch</a>
     </td>
   </tr>
 </table>
