adding link to past issues of newsletter

--- a/pages/join.html
+++ b/pages/join.html
@@ -16,6 +16,8 @@ redirect_from:
     Join our Mailing List
   </button>
 </a>
+  <br>
+ <a href="http://us14.campaign-archive2.com/home/?u=46d7513c798c6bd41e5f58f4a&id=50c3e6d6fe">Past issues</a> 
 
 </div>
 
