Added helpers as required to adhere to code of conduct.

--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -114,7 +114,7 @@ redirect_from:
   </li>
   <li>
     <p>
-      We require hosts, instructors, and learners to adhere to our
+      We require hosts, instructors, helpers and learners to adhere to our
       <a href="{{site.baseurl}}/conduct/">code of conduct</a>.
     </p>
   </li>
