Updating list of Steering Committee members.
1.  Updated list on `/scf/` page.
2.  Fixed entries for new Steering Committee members.

--- a/pages/scf.html
+++ b/pages/scf.html
@@ -81,33 +81,33 @@ redirect_from:
   </div>
 </div>
 
-<h2 id="committee-2016">Steering Committee (2016)</h2>
+<h2 id="committee-2016">Steering Committee (2017)</h2>
 
 <div class="row">
-  <div class="medium-4 columns">
-    {% include people/weaver_belinda.html %}
-  </div>
   <div class="medium-4 columns">
     {% include people/harris_rayna.html %}
   </div>
   <div class="medium-4 columns">
-    {% include people/lagesen_k.html %}
-  </div>
-</div>
-<div class="row">
-  <div class="medium-4 columns">
-    {% include people/williams_jason.html %}
-  </div>
-  <div class="medium-4 columns">
-    {% include people/mills_b.html %}
-  </div>
-  <div class="medium-4 columns">
     {% include people/hertweck_kate.html %}
   </div>
+  <div class="medium-4 columns">
+    {% include people/koch_christina.html %}
+  </div>
 </div>
 <div class="row">
   <div class="medium-4 columns">
-    {% include people/silva_raniere.html %}
+    {% include people/kuzak_mateusz.html %}
+  </div>
+  <div class="medium-4 columns">
+    {% include people/lagesen_k.html %}
+  </div>
+  <div class="medium-4 columns">
+    {% include people/mcclatchy_sue.html %}
+  </div>
+</div>
+<div class="row">
+  <div class="medium-4 columns">
+    {% include people/weaver_belinda.html %}
   </div>
   <div class="medium-4 columns"></div>
   <div class="medium-4 columns"></div>
