--- a/pages/scf.html
+++ b/pages/scf.html
@@ -173,7 +173,16 @@ redirect_from:
       <li><a href="{{page.minutes}}/minutes-2016-01-04.md">2016-01-04</a></li>
     </ul>
   </div>
-  <div class="medium-6 columns">
+<div class="medium-2 columns">
+    <h3>2017</h3>
+    <ul>
+      <li><a href="{{page.minutes}}/minutes-2017-04-03.md">2017-04-03</a></li>
+      <li><a href="{{page.minutes}}/minutes-2017-03-08.md">2017-03-08</a></li>
+      <li><a href="{{page.minutes}}/minutes-2017-02-22.md">2017-02-22</a></li>
+      <li><a href="{{page.minutes}}/minutes-2017-01-04.md">2017-01-04</a></li>
+    </ul>
+  </div>
+  <div class="medium-4 columns">
   </div>
 </div>
 
