--- a/pages/lessons_previous.html
+++ b/pages/lessons_previous.html
@@ -12,38 +12,45 @@ title: Previous Material
 <table class="table table-striped">
   <tr>
     <th>Lesson</th>
-    <th>Version 2015.08 (August 2015)</th>
-    <th>Version 2016.06 (June 2016)</th>
+    <th class="text-center">Version 2015.08 <br/> (August 2015)</th>
+    <th class="text-center">Version 2016.06 <br/> (June 2016)</th>
+    <th class="text-center">Version 2017.02 <br/> (February 2017)</th>
   </tr>
   <tr>
     <td>The Unix Shell</td>
     <td><a href="{{site.releases_io_url}}/2015.08/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell"></a></td>
     <td><a href="{{site.releases_io_url}}/2016.06/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell"></a></td>
+    <td><a href="{{site.releases_io_url}}/2017.02/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell"></a></td>
   </tr>
   <tr>
     <td>Version Control with Git</td>
     <td><a href="{{site.releases_io_url}}/2015.08/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
     <td><a href="{{site.releases_io_url}}/2016.06/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
+    <td><a href="{{site.releases_io_url}}/2017.02/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
   </tr>
   <tr>
     <td>Version Control with Mercurial</td>
     <td><a href="{{site.releases_io_url}}/2015.08/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
     <td><a href="{{site.releases_io_url}}/2016.06/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
+    <td><a href="{{site.releases_io_url}}/2017.02/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
   </tr>
   <tr>
     <td>Using Databases and SQL</td>
     <td><a href="{{site.releases_io_url}}/2015.08/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.releases_io_url}}/2016.06/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
+    <td><a href="{{site.releases_io_url}}/2017.02/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
   </tr>
   <tr>
     <td>Programming with Python</td>
     <td><a href="{{site.releases_io_url}}/2015.08/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
     <td><a href="{{site.releases_io_url}}/2016.06/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
+    <td><a href="{{site.releases_io_url}}/2017.02/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
   </tr>
   <tr>
     <td>Programming with R</td>
     <td><a href="{{site.releases_io_url}}/2015.08/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
     <td><a href="{{site.releases_io_url}}/2016.06/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
+    <td><a href="{{site.releases_io_url}}/2017.02/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
   </tr>
 </table>
 
