Fixing nbdiff reference to nbdime. Fixes #660

--- a/pages/join_helpwanted.html
+++ b/pages/join_helpwanted.html
@@ -149,10 +149,8 @@ redirect_from:
       </li>
       <li>
         <p>
-          A groups of students have built
-          <strong><a href="http://nbdiff.org/">a diff-and-merge tool for the Jupyter Notebook</a></strong>.
-          Polishing this would help everyone in the IPython community,
-          not just us.
+          A follow on from nbdiff, <a href="https://github.com/jupyter/nbdime">nbdime</a> is a tool for diff and 
+          merging of Jupyter Notebooks.
         </p>
       </li>
       <li>
