update_instructor_discussion_items

--- a/pages/checklists_lead.html
+++ b/pages/checklists_lead.html
@@ -140,6 +140,11 @@ redirect_from:
       struggles to keep up with the load sometimes as it is.
     </p>
   </li>
+  <li>
+    <p>
+      It is encouraged to participate in an <a href="http://pad.software-carpentry.org/instructor-discussion/">Instructor Discussion session</a> before the workshop to discuss pre-workshop planning. You can also email other instructors who have been involved with the planning process encouraging them to participate in a session as well. Participating in the sessions provides valuable insight to new instructors and can allow you an opportunity to ask questions before your workshop.
+    </p>
+  </li>
 </ul>
 
 <h2>A Week Before</h2>
@@ -287,9 +292,9 @@ redirect_from:
 
 <h2>After</h2>
 <ul>
-  <li>
+   <li>
     <p>
-      Take part in a debriefing session.
+      Participate in an <a href="http://pad.software-carpentry.org/instructor-discussion/">Instructor Discussion session</a> for a workshop debrief. You can also email other instructors and helpers encouraging them to participate in a session for debriefing. Participating in the sessions provides valuable insight for new instructors and allows you to contribute useful feedback for future workshops.  
     </p>
   </li>
   <li>
