--- a/pages/scf.html
+++ b/pages/scf.html
@@ -176,6 +176,8 @@ redirect_from:
 <div class="medium-2 columns">
     <h3>2017</h3>
     <ul>
+      <li><a href="{{page.minutes}}/minutes-2017-05-10.md">2017-05-10</a></li>
+      <li><a href="{{page.minutes}}/minutes-2017-05-01.md">2017-05-01</a></li>
       <li><a href="{{page.minutes}}/minutes-2017-04-03.md">2017-04-03</a></li>
       <li><a href="{{page.minutes}}/minutes-2017-03-08.md">2017-03-08</a></li>
       <li><a href="{{page.minutes}}/minutes-2017-02-22.md">2017-02-22</a></li>
