changing for Belinda's new role

--- a/pages/scf.html
+++ b/pages/scf.html
@@ -70,14 +70,16 @@ redirect_from:
   <div class="medium-4 columns">
     <h4>Executive Director</h4>
     {% include people/duckles_jonah.html %}
+    <a href="mailto:jduckles@carpentries.org">jduckles@carpentries.org</a>
   </div>
   <div class="medium-4 columns">
     <h4>Program Coordinator</h4>
     {% include people/sane_maneesha.html %}
   </div>
   <div class="medium-4 columns">
-    <h4>Emeritus Executive Director</h4>
-    {% include people/wilson_g.html %}
+    <h4>Community Development Lead</h4>
+    {% include people/weaver_belinda.html %}
+    <a href="mailto:bweaver@carpentries.org">bweaver@carpentries.org</a>
   </div>
 </div>
 
@@ -107,7 +109,7 @@ redirect_from:
 </div>
 <div class="row">
   <div class="medium-4 columns">
-    {% include people/weaver_belinda.html %}
+
   </div>
   <div class="medium-4 columns"></div>
   <div class="medium-4 columns"></div>
