--- a/pages/about.html
+++ b/pages/about.html
@@ -86,7 +86,7 @@ title: About Us
   <div class="medium-4 columns">
     <h4>Buy Things</h4>
     <p>
-      Want to show your support? You can <a href="{{site.baseurl}}/donate/">donate</a>,
+      Want to show your support? You can <a href="{{site.baseurl}}/join/donate/">donate</a>,
       or vist our <a href="http://www.cafepress.com/swcarpentry">online store</a>
       offering everything from maternity shirts to messenger bags,
       and you can <a href="http://www.stickermule.com/user/1070632011/stickers">buy our stickers</a> too.
